--- a/src/components/HomePage.scss
+++ b/src/components/HomePage.scss
@@ -93,9 +93,6 @@ $whiteColor: #fff;
       padding: 0;
     }
   }
-  .ms-Pivot-text {
-    color: #152935 !important;
-  }
   .image-space {
     padding: 0 100px 0 0;
   }
